adjusted hero-component section styling – fixed alignment and corrected nesting

--- a/src/app/content/hero/hero.component.sass
+++ b/src/app/content/hero/hero.component.sass
@@ -13,6 +13,7 @@
     align-items: center
     background: linear-gradient(0deg, rgba(234,240,255,1) 0%, rgba(245,248,255,1) 35%, rgba(255,255,255,1) 100%)
     width: 100%
+    
     height: 100%
     overflow: hidden
     // border: 2px solid red
@@ -56,6 +57,7 @@
 
         .hero-img-header-scroll-iconlist
             width: 100vw
+            max-width: 1920px
             height: 100%
             display: flex
             align-items: flex-start
@@ -66,13 +68,14 @@
 
             .hero-img-container
                 width: 49%
-                min-width: 370px
-                max-width: 700px
+                min-width: 200px
+                max-width: 550px
                 margin-bottom: 0!important
                 height: 100%
                 z-index: 2
                 display: flex
-                justify-content: flex-start
+                justify-content: center
+                align-items: flex-end
                 border: 5px solid hotpink
 
                 .hero-img
@@ -81,13 +84,13 @@
                     width: 100%
                     height: auto
                     display: flex
-                    object-fit: cover
+                    object-fit: scale-down
                     overflow: hidden
                     // border: 2px solid purple
 
             .hero-header-scroll-container
                 width: 49%
-                min-width: 370px
+                min-width: 200px
                 max-width: 550px
                 margin-bottom: 0!important
                 margin-top: 9rem
@@ -116,7 +119,7 @@
                         border: 2px solid pink
 
                         .header-txt-allignement
-                            width: 90%
+                            width: 100%
                             height: auto
                             display: flex
                             flex-direction: column
@@ -239,4 +242,46 @@
                                         height: 100%
                                         object-fit: contain
 
+@media (min-height: 1100px)
+    :host
+        height: 100dvh
 
+
+@media (min-width: 2000px) or (min-height: 1081px)
+    :host
+        height: auto
+
+    .hero-section
+        
+        .hero-container
+
+            .hero-top-circle-container
+                top: -45%
+                left: 20%
+                width: auto
+                padding: 0
+
+                .circle-3-container
+
+                    .circle-3
+                        width: 50rem
+                        height: 50rem
+                        border-radius: 50%
+                        background: radial-gradient(74.22% 74.22% at 19.79% 22.42%, #5988FF 6.25%, #5988FF 51.56%, #0043F0 100%)
+
+            .hero-img-header-scroll-iconlist
+                height: 100%
+                margin-top: 117px
+
+                .hero-img-container
+                    height: 100%
+
+                    .hero-img
+                        background-color: rgb(255, 255, 255, 0.1)
+                        border-radius: 1rem
+                        width: auto
+                        height: 100%
+
+@media (min-height: 1100px)
+    :host
+        height: 100dvh
